--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -14,32 +14,12 @@
 # the License.
 #-------------------------------------------------------------------------------
 
-#primary.datasource.url=jdbc:oracle:thin:@103.166.197.166:1521/ORCL
-#primary.datasource.username=CORSYS_MSA_UAT
-#primary.datasource.password=CorMSA0225
-#primary.datasource.driverClassName=oracle.jdbc.OracleDriver
-#
-#shadow.datasource.url=jdbc:oracle:thin:@103.166.197.166:1521/ORCL
-#shadow.datasource.username=CORSYS_MSA_UAT
-#shadow.datasource.password=CorMSA0225
-#shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
-
-#primary.datasource.url=jdbc:oracle:thin:@103.166.197.166:1521/ORCL
-#primary.datasource.username=CORSYS_MSA
-#primary.datasource.password=CorMSA0325
-#primary.datasource.driverClassName=oracle.jdbc.OracleDriver
-#
-#shadow.datasource.url=jdbc:oracle:thin:@103.166.197.166:1521/ORCL
-#shadow.datasource.username=CORSYS_MSA
-#shadow.datasource.password=CorMSA0325
-#shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
-
-primary.datasource.url=jdbc:oracle:thin:@114.9.28.134:1521/BPRLINGGA
-primary.datasource.username=CORSYS_TEST
-primary.datasource.password=CorLing123
+primary.datasource.url=jdbc:oracle:thin:@10.57.57.12:1521/XE
+primary.datasource.username=CORMAA_DEV
+primary.datasource.password=CorMaa123
 primary.datasource.driverClassName=oracle.jdbc.OracleDriver
 
-shadow.datasource.url=jdbc:oracle:thin:@114.9.28.134:1521/BPRLINGGA
-shadow.datasource.username=CORSYS_TEST
-shadow.datasource.password=CorLing123
+shadow.datasource.url=jdbc:oracle:thin:@10.57.57.12:1521/XE
+shadow.datasource.username=CORMAA_DEV
+shadow.datasource.password=CorMaa123
 shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
