--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@ http://www.apache.org/licenses/LICENSE-2.0
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>id.co.corsys.danamon.va</groupId>
-	<artifactId>api-server-danamon-va</artifactId>
+	<groupId>id.co.corsys.faspay.va</groupId>
+	<artifactId>api-server-faspay-va</artifactId>
 	<version>staging</version>
 	<packaging>war</packaging>
-	<name>api-server-danamon-va</name>
+	<name>api-server-faspay-va</name>
 	<description>Demo project for Spring Boot</description>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
