--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -23,3 +23,13 @@ shadow.datasource.url=jdbc:oracle:thin:@10.57.57.12:1521/XE
 shadow.datasource.username=CORMAA_DEV
 shadow.datasource.password=CorMaa123
 shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
+
+#primary.datasource.url=jdbc:oracle:thin:@SERVERCORSYS:1521/ORCL
+#primary.datasource.username=CORSYS_MAA
+#primary.datasource.password=CorMaa123
+#primary.datasource.driverClassName=oracle.jdbc.OracleDriver
+#
+#shadow.datasource.url=jdbc:oracle:thin:@SERVERCORSYS:1521/ORCL
+#shadow.datasource.username=CORSYS_MAA
+#shadow.datasource.password=CorMaa123
+#shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
