--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -14,15 +14,15 @@
 # the License.
 #-------------------------------------------------------------------------------
 
-primary.datasource.url=jdbc:oracle:thin:@10.57.57.12:1521/XE
-primary.datasource.username=CORMAA_DEV
-primary.datasource.password=CorMaa123
-primary.datasource.driverClassName=oracle.jdbc.OracleDriver
-
-shadow.datasource.url=jdbc:oracle:thin:@10.57.57.12:1521/XE
-shadow.datasource.username=CORMAA_DEV
-shadow.datasource.password=CorMaa123
-shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
+#primary.datasource.url=jdbc:oracle:thin:@10.57.57.12:1521/XE
+#primary.datasource.username=CORMAA_DEV
+#primary.datasource.password=CorMaa123
+#primary.datasource.driverClassName=oracle.jdbc.OracleDriver
+#
+#shadow.datasource.url=jdbc:oracle:thin:@10.57.57.12:1521/XE
+#shadow.datasource.username=CORMAA_DEV
+#shadow.datasource.password=CorMaa123
+#shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
 
 #primary.datasource.url=jdbc:oracle:thin:@SERVERCORSYS:1521/ORCL
 #primary.datasource.username=CORSYS_MAA
@@ -33,3 +33,13 @@ shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
 #shadow.datasource.username=CORSYS_MAA
 #shadow.datasource.password=CorMaa123
 #shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
+
+primary.datasource.url=jdbc:oracle:thin:@192.168.2.237:1521/DEV3
+primary.datasource.username=DEV3-TEST
+primary.datasource.password=BprB4ht3r4
+primary.datasource.driverClassName=oracle.jdbc.OracleDriver
+
+shadow.datasource.url=jdbc:oracle:thin:@192.168.2.237:1521/DEV3
+shadow.datasource.username=DEV3-TEST
+shadow.datasource.password=BprB4ht3r4
+shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
