--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -34,12 +34,22 @@
 #shadow.datasource.password=CorMaa123
 #shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
 
-primary.datasource.url=jdbc:oracle:thin:@192.168.2.237:1521/DEV3
-primary.datasource.username=DEV3-TEST
-primary.datasource.password=BprB4ht3r4
+#primary.datasource.url=jdbc:oracle:thin:@192.168.2.237:1521/DEV3
+#primary.datasource.username=DEV3-TEST
+#primary.datasource.password=BprB4ht3r4
+#primary.datasource.driverClassName=oracle.jdbc.OracleDriver
+#
+#shadow.datasource.url=jdbc:oracle:thin:@192.168.2.237:1521/DEV3
+#shadow.datasource.username=DEV3-TEST
+#shadow.datasource.password=BprB4ht3r4
+#shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
+
+primary.datasource.url=jdbc:oracle:thin:@192.168.0.66:1521/BPRWM
+primary.datasource.username=CORWM_CETAKL
+primary.datasource.password=WmSys2021
 primary.datasource.driverClassName=oracle.jdbc.OracleDriver
 
-shadow.datasource.url=jdbc:oracle:thin:@192.168.2.237:1521/DEV3
-shadow.datasource.username=DEV3-TEST
-shadow.datasource.password=BprB4ht3r4
+shadow.datasource.url=jdbc:oracle:thin:@192.168.0.66:1521/BPRWM
+shadow.datasource.username=CORWM_CETAKL
+shadow.datasource.password=WmSys2021
 shadow.datasource.driverClassName=oracle.jdbc.OracleDriver
